testsuite/tests/parser/should_fail/patFail002.stderr

patFail002.hs:3:4: error: (let ... in ...)-syntax in pattern
